--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
 	"author": "quinton-ashley",
 	"name": "q5",
-	"version": "1.9.6",
+	"version": "1.9.7",
 	"description": "An implementation of the p5.js 2D API that's smaller and faster",
-	"main": "q5.js",
+	"main": "q5-server.js",
 	"scripts": {
 		"min": "minify q5.js > q5.min.js",
 		"dist": "cp q5.js ../../web/p5play-web/v3/q5.js && bun min && cp q5.min.js ../../web/p5play-web/v3/q5.min.js",
