--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
 	"author": "quinton-ashley",
 	"name": "q5",
-	"version": "1.9.25",
+	"version": "1.9.26",
 	"description": "The unofficial sequel to p5.js",
 	"main": "q5-server.js",
 	"scripts": {
+		"bundle": "cat src/q5-core.js src/q5-2d-canvas.js > q5.bundle.js",
 		"min": "terser q5.js --compress ecma=2024 --mangle > q5.min.js",
 		"dist": "cp q5.js ../../web/p5play-web/v3/q5.js && bun min && cp q5.min.js ../../web/p5play-web/v3/q5.min.js",
 		"v": "npm version patch --force",
