--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"author": "quinton-ashley",
 	"name": "q5",
-	"version": "1.9.26",
+	"version": "1.9.27",
 	"description": "The unofficial sequel to p5.js",
 	"main": "q5-server.js",
 	"scripts": {
-		"bundle": "cat src/q5-core.js src/q5-2d-canvas.js > q5.bundle.js",
+		"bundle": "cat src/q5-core.js src/q5-2d-canvas.js src/q5-2d-drawing.js src/q5-2d-image.js src/q5-2d-text.js src/q5-ai.js src/q5-color.js src/q5-input.js src/q5-math.js src/q5-sound.js src/q5-util.js src/q5-vector.js > q5.js",
 		"min": "terser q5.js --compress ecma=2024 --mangle > q5.min.js",
 		"dist": "cp q5.js ../../web/p5play-web/v3/q5.js && bun min && cp q5.min.js ../../web/p5play-web/v3/q5.min.js",
 		"v": "npm version patch --force",
