--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "q5",
-	"version": "2.0.11",
-	"description": "The sequel to p5.js that's smaller and faster",
+	"version": "2.0.12",
+	"description": "A sequel to p5.js that's smaller and faster",
 	"author": "quinton-ashley",
 	"contributors": [
 		"Tezumie",
