--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "q5",
-	"version": "2.6.1",
+	"version": "2.6.2",
 	"description": "A sequel to p5.js that's optimized for interactive art",
 	"author": "quinton-ashley",
 	"contributors": [
@@ -38,7 +38,6 @@
 	],
 	"devDependencies": {
 		"canvas": "^2.11.2",
-		"jsdom": "^24.1.0",
-		"@types/p5": "^1.7.6"
+		"jsdom": "^24.1.0"
 	}
 }
