--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "q5",
-	"version": "2.10.7",
+	"version": "2.10.8",
 	"description": "A sequel to p5.js that's optimized for interactive art",
 	"author": "quinton-ashley",
 	"contributors": [
@@ -15,6 +15,7 @@
 		"min": "terser q5.js --compress ecma=2024 --mangle > q5.min.js",
 		"dist": "bun bundle && bun min",
 		"dist-p5play": "bun dist && cp q5.js ../../web/p5play-web/v3/q5.js && cp q5.min.js ../../web/p5play-web/v3/q5.min.js",
+		"tests": "deno test --unstable-node-globals -A",
 		"v": "npm version patch --force",
 		"V": "npm version minor --force",
 		"version": "git add -A",
@@ -35,9 +36,5 @@
 		"q5xjs",
 		"q5.js",
 		"q5js"
-	],
-	"devDependencies": {
-		"canvas": "^2.11.2",
-		"jsdom": "^24.1.0"
-	}
+	]
 }
