--- a/deno.json
+++ b/deno.json
@@ -1,10 +1,11 @@
 {
 	"name": "@q5/q5",
-	"version": "2.10.8",
+	"version": "2.11.0",
 	"license": "LGPL-3.0",
 	"description": "A sequel to p5.js that's optimized for interactive art",
 	"author": "quinton-ashley",
 	"exports": "./q5-deno-server.js",
+	"types": "./q5-deno-server.d.ts",
 	"tasks": {
 		"tests": "deno test --unstable-node-globals -A"
 	},
@@ -28,7 +29,7 @@
 			"CNAME",
 			"CODE_OF_CONDUCT.md",
 			"deno.lock",
-			"Icon",
+			"Icon?",
 			"package.json"
 		]
 	}
