--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "q5",
-	"version": "2.11.1",
+	"version": "2.11.2",
 	"description": "A sequel to p5.js that's optimized for interactive art",
 	"author": "quinton-ashley",
 	"contributors": [
@@ -15,7 +15,7 @@
 		"min": "terser q5.js --compress ecma=2024 --mangle > q5.min.js",
 		"dist": "bun bundle && bun min",
 		"dist-p5play": "bun dist && cp q5.js ../../web/p5play-web/v3/q5.js && cp q5.min.js ../../web/p5play-web/v3/q5.min.js",
-		"tests": "deno test --unstable-node-globals -A",
+		"tests": "jest test",
 		"v": "npm version patch --force",
 		"V": "npm version minor --force",
 		"version": "git add -A",
@@ -38,6 +38,7 @@
 		"q5js"
 	],
 	"devDependencies": {
+		"jest-cli": "^29.7.0",
 		"jsdom": "^25.0.1",
 		"skia-canvas": "^1.0.2"
 	}
