--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "q5",
-	"version": "2.13.12",
+	"version": "2.14.0",
 	"description": "A sequel to p5.js that's optimized for interactive art",
 	"author": "quinton-ashley",
 	"contributors": [
@@ -40,6 +40,7 @@
 	"devDependencies": {
 		"jest-cli": "^29.7.0",
 		"jsdom": "^25.0.1",
-		"skia-canvas": "^1.0.2"
+		"skia-canvas": "^1.0.2",
+		"json2csv": "^6.0.0-alpha.2"
 	}
 }
