--- a/.npmignore
+++ b/.npmignore
@@ -6,6 +6,7 @@ fonts
 home
 lang
 learn
+src
 node_modules
 test
 p5-test
@@ -16,3 +17,6 @@ jsconfig.json
 CODE_OF_CONDUCT.md
 bun.lockb
 deno.lock
+q5js_brand.webp
+q5js_icon.png
+q5js_logo.webgp
