--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
 	"name": "@q5/q5",
-	"version": "2.12.0",
+	"version": "2.15.0",
 	"license": "LGPL-3.0",
 	"description": "A sequel to p5.js that's optimized for interactive art",
 	"author": "quinton-ashley",
@@ -19,6 +19,7 @@
 			".vscode",
 			"assets",
 			"dev",
+			"src",
 			"fonts",
 			"home",
 			"lang",
