--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,8 @@
 {
 	"name": "@q5/q5",
-	"version": "2.21.0",
+	"version": "2.22.0",
 	"license": "LGPL-3.0",
-	"description": "A sequel to p5.js that's optimized for interactive art",
+	"description": "Beginner friendly graphics powered by WebGPU and optimized for interactive art!",
 	"author": "quinton-ashley",
 	"exports": "./q5-deno-server.js",
 	"types": "./q5-deno-server.d.ts",
