--- a/deno.json
+++ b/deno.json
@@ -1,11 +1,11 @@
 {
 	"name": "@q5/q5",
-	"version": "2.22.0",
+	"version": "2.23.0",
 	"license": "LGPL-3.0",
 	"description": "Beginner friendly graphics powered by WebGPU and optimized for interactive art!",
 	"author": "quinton-ashley",
 	"exports": "./q5-deno-server.js",
-	"types": "./q5-deno-server.d.ts",
+	"types": "./q5.d.ts",
 	"tasks": {
 		"tests": "deno test --unstable-node-globals -A"
 	},
