--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "q5",
-	"version": "2.22.4",
+	"version": "2.23.0",
 	"description": "Beginner friendly graphics powered by WebGPU and optimized for interactive art!",
 	"author": "quinton-ashley",
 	"contributors": [
@@ -10,9 +10,10 @@
 	"license": "LGPL-3.0",
 	"homepage": "https://q5js.org/home",
 	"main": "q5-server.js",
+	"types": "q5.d.ts",
 	"scripts": {
 		"bundle": "cat src/q5-core.js src/q5-canvas.js src/q5-c2d-canvas.js src/q5-c2d-shapes.js src/q5-c2d-image.js src/q5-c2d-soft-filters.js src/q5-c2d-text.js src/q5-ai.js src/q5-color.js src/q5-display.js src/q5-dom.js src/q5-input.js src/q5-math.js src/q5-record.js src/q5-sound.js src/q5-util.js src/q5-vector.js src/q5-webgpu-canvas.js src/q5-webgpu-shapes.js src/q5-webgpu-image.js src/q5-webgpu-text.js src/q5-webgpu-shaders.js > q5.js",
-		"min": "terser q5.js --compress ecma=2024 --mangle > q5.min.js",
+		"min": "terser q5.js --compress ecma=2025 --mangle > q5.min.js",
 		"dist": "bun bundle && bun min",
 		"dist-p5play": "bun dist && cp q5.js ../../web/p5play-web/v3/q5.js && cp q5.min.js ../../web/p5play-web/v3/q5.min.js",
 		"tests": "jest test",
@@ -29,13 +30,13 @@
 		"url": "https://github.com/q5js/q5.js/issues"
 	},
 	"keywords": [
+		"q5.js",
+		"q5js",
+		"q5xjs",
 		"p5",
 		"p5js",
 		"p5.js",
-		"p5xjs",
-		"q5xjs",
-		"q5.js",
-		"q5js"
+		"p5xjs"
 	],
 	"devDependencies": {
 		"jest-cli": "^29.7.0",
