--- a/.npmignore
+++ b/.npmignore
@@ -18,6 +18,6 @@ jsconfig.json
 CODE_OF_CONDUCT.md
 bun.lockb
 deno.lock
-q5js_brand.webp
+q5js_brand.avif
 q5js_icon.png
-q5js_logo.webgp
+q5js_logo.avif
